<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_new_file"
            android:title="@string/nav_new" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_save"
            android:title="@string/nav_save" />
        <item
            android:id="@+id/nav_load"
            android:icon="@drawable/ic_load"
            android:title="@string/nav_load" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/nav_camera" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
